kubernetes/apps/self-hosted/dawarich/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dawarich
spec:
  hostnames:
    - dawarich.internal
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-internal
  rules:
    - backendRefs:
        - name: dawarich
          port: 3000
